applications/viktor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorio
  labels:
    app: factorio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorio
  template:
    metadata:
      labels:
        app: factorio
    spec:
      containers:
        - name: factorio
          image: factoriotools/factorio:stable
          resources:
            requests:
              cpu: 2
              memory: 5Gi
            limits:
              cpu: 6
              memory: 10Gi
          ports:
            - name: steam-discovery
              containerPort: 27015
              protocol: TCP
            - name: factorio
              containerPort: 34197
              protocol: UDP
