applications/viktor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factorio
spec:
  selector:
    app: factorio
  ports:
    - name: factorio
    - name: steam-discovery
  type: LoadBalancer
