applications/viktor/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: no-internal-network
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
  - to:
    - ipBlock:
        cidr: '0.0.0.0/0'
        except: ['10.0.0.0/8']
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: viktor
